--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,24 @@
-<!DOCTYPE html>
-<html lang='en'>
+<!--
+  **NOTE:** This is a template for index.html.
+  It uses ejs and htmlWebpackPlugin to generate a different index.html for each environment.
+  htmlWebpackPlugin will dynamically add references to the scripts and styles that it bundles
+  to this file. The generated bundles have hash-based filenames,
+  so it's necessary to add the references dynamically.
+  For more info on ejs, see http://www.embeddedjs.com/.
+  For examples of using it with htmlWebpackPlugin,
+  see https://github.com/jaketrent/html-webpack-template/blob/master/index.ejs
+  -->
+  <!DOCTYPE html>
 <head>
-  <meta charset="UTF-8">
-</head>
+<% if (htmlWebpackPlugin.options.trackJSToken) { %>
+<!-- BEGIN TRACKJS -->
+<script type="text/javascript">window._trackJs = { token: '<%=htmlWebpackPlugin.options.trackJSToken%>' };</script>
+<script type="text/javascript" src="https://cdn.trackjs.com/releases/current/tracker.js"></script>
+<!-- END TRACKJS -->
+<% } %>
+<head>
 <body>
-  <<h1>Users</h1>
+    <h1>Users</h1>
   <table>
     <thead>
       <th>&nbsp;</th>
@@ -17,6 +31,5 @@
 
     </tbody>
   </table>
-  <script src="bundle.js"></script>
 </body>
 </html>
